# Sky_ClawGravity

./: $(Test-Path  .claudeignore.bak  .clinerules  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  .rooignore  .roomodes  AGENTS.md  AUDITORIA_INTEGRAL_SKY_CLAW.md  AUDITORIA_TECNICA_INTEGRAL_2026.md  AUDITORIA_TECNICA_SKYCLAW_V2.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_RESOLUTION.md  GEMINI.md  IMPLEMENTATION-SUMMARY.txt  IMPROVEMENTS.md  INFORME_ANALISIS_ESTATICO.md  Idea.md  LICENSE  PLAN_REFACTORIZACION_CONSOLIDADO.md  QUICKSTART.md  README.md  REFACTOR-VALIDATION.md  SYNC_PROTOCOL_REPORT.md  SkyClawApp.bat  TECHNICAL_SPEC_DLQ.md  ZERO_TRUST_TODO.md  build.bat  copilot-instructions.md  debug_llm.py  docker-compose.agents.yml  gemini.md  informe_revision.md  mod_registry_history.db-shm  mod_registry_history.db-wal  plan KIMI fase2.txt  (+13 more)
.agents/scripts/: verify_agent_stubs.py
.agents/skills/: AGENTS.md
.agents/workflows/: audit.md  deploy.md  harden.md  sync.md  test.md
.antigravity/: config.json  settings.json
.claude/: settings.json
.claude/Calude.md/: CLAUDE (2).md
.claude/rules/: architecture_stability.md
.github/: coding_conventions.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
Auditorias/: AUDITORIA_INTEGRAL_SKYCLAW.md  AUDITORIA_INTEGRAL_SKY_CLAW.md  AUDITORIA_META_REVISION_KIMI27.md  AuditoriaKIMI27.md
_LOCAL_BACKUP/: .claudeignore  .claudeignore.bak  AUDITORIA_POST_MERGE_TASK011.md  CLAUDE.md
_LOCAL_BACKUP/.claude/: settings.json
antigravity/frontend/: index.html
antigravity/gateway/: package.json
antigravity/tests/: test_animation_hub_medio001.py  test_app_context_arc01_arc03.py  test_auto_detect.py  test_conflict_analyzer.py  test_distributed_locks.py  test_event_bus_dlq_integration.py  test_executor_alto005.py  test_graph_integration_wiring.py  test_hermes_tool_registry.py  test_hitl_wiring.py  test_lazy_init.py  test_providers.py  test_schemas.py  test_state_graph.py  test_supervisor_dispatch_tool.py  test_sync_engine.py  test_synthesis_service.py  test_system_tools_medio001.py  test_tool_state_machine.py  test_tools.py  test_vramr_service.py  test_web.py  test_xedit.py  test_xedit_service.py
docs/: ARCHITECTURE-ANALYSIS.md  AUDITORIA_RENDIMIENTO_PYTHON.md  AUTOGEN-INTEGRATION.md  CODE_REVIEW_SUPERVISOR.md  DB-001_SCHEMA_DIAGNOSTIC.md  FASE15_BLINDAJE_SEMANTICO_OPERATIVO.md  FASE4_DYNDLOD_INTEGRATION.md  LANGGRAPH-STATEGRAFH-INTEGRATION.md  LCEL-STABILITY-CHECK.md  M-13_FORENSIC_AUDIT.md  METAPROMPT-AUDITORIA-DEFINITIVA.md  PLAN_ANTI_HALLUCINATION_GEMINI.md  PRE-FLIGHT-CHECK.md  PR_WORKFLOW_security-hardening-gui-fixes.md  PULL_REQUEST_security-hardening-gui-fixes.md  SUPERVISOR_DECOUPLING_ANALYSIS.md  TROUBLESHOOTING_ANTIGRAVITY.md
docs/superpowers/: skyclaw_master_evaluation.md
frontend/: .prettierignore  .prettierrc  Sky-Claw Operations Hub.html  dashboard.html  index.html
frontend/css/: medieval-theme.css  operations-hub.css  style.css
frontend/js/: arsenal.js  operations-hub.js
gateway/: .env  package-lock.json  package.json  server.js  telegram_gateway.js
local/scripts/: first_run.py  setup_env.ps1
local_docs/python_optimization/: SKILL.md  advanced-optimization.md  profiling-tools.md
local_scripts/scripts/: lock_git_dir.ps1  restart_agent.ps1  watcher_daemon.ps1
project_scrape/: txt1.txt  txt2.txt  txt3.txt  txt4.txt
scripts/: first_run.py  fix_agent_panel_deep.ps1  fix_agent_panel_definitive.ps1  fix_gemini_panel.ps1  fix_git_guard.ps1  gemini-validate.ps1  gemini_write.py  scrape_project.py  setup_env.ps1  skyscraping_extract.py  sre_agent_panel_repair.ps1
sky_claw/: __init__.py  __main__.py  app_context.py  auto_detect.py  compat.py  config.py  local_config.py  logging_config.py  tools_installer.py
sky_claw/agent/: __init__.py  animation_hub.py  autogen_integration.py  context_manager.py  executor.py  hermes_parser.py  lcel_chains.py  providers.py  purple_security_agent.py  router.py  semantic_router.py  specialized_bridges.py  token_budget.py  token_circuit_breaker.py  tools.py  tools_facade.py
sky_claw/assets/: __init__.py  asset_scanner.py
sky_claw/comms/: _transport.py  frontend_bridge.py  interface.py  telegram.py  telegram_polling.py  telegram_sender.py  ws_daemon.py
sky_claw/core/: __init__.py  async_path_resolver.py  contracts.py  database.py  db_lifecycle.py  dlq_manager.py  event_bus.py  event_payloads.py  models.py  path_resolver.py  schemas.py  vfs_orchestrator.py  windows_interop.py
sky_claw/db/: async_registry.py  journal.py  locks.py  registry.py  rollback_manager.py  snapshot_manager.py
sky_claw/discovery/: environment.py  scanner.py
sky_claw/fomod/: installer.py  models.py  parser.py  resolver.py
sky_claw/gui/: agent_communication.py  app.py  dashboard.py  event_bus.py  icons.py  message_handlers.py  setup_wizard.py  sky_claw_gui.py  sky_claw_gui.py.backup  utils.py
sky_claw/local/: auto_detect.py  local_config.py  tools_installer.py
sky_claw/loot/: cli.py  (+2 more)
tests/: conftest.py  polling_utils.py  some_test_file.py  test_agent_guardrail.py  test_agent_tools.py  test_animation_hub_medio001.py  test_app_context_arc01_arc03.py  test_asset_scanner_asa001.py  test_async_path_resolver.py  test_async_path_resolver_resilience.py  test_async_registry.py  test_auth_token_manager.py  test_auto_detect.py  test_autogen_integration.py  test_circuit_breaker.py  test_cli_modes.py  test_conflict_analyzer.py  test_contracts_ticket_1_1.py  test_core_event_bus.py  test_credential_vault.py  test_credential_vault_sec02.py  test_db_integrity.py  test_db_lifecycle.py  test_distributed_locks.py  test_dlq_double_dispatch.py  test_dlq_manager.py  test_dt01_dt02_regressions.py  test_dyndolod_service.py  test_event_bus_backpressure.py  test_event_bus_dlq_integration.py  test_exe_config_sandbox.py  test_executor_alto005.py  test_file_permissions.py  test_file_permissions_post_validation.py  test_fomod.py  test_fomod_installer.py  test_governance_async_hash.py  test_governance_db.py  test_graph_integration_wiring.py  test_hermes_parser.py  (+72 more)
(+376 files in other folders)
