[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sky-claw"
version = "0.1.0"
description = "Autonomous Skyrim mod management agent via Mod Organizer 2"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1,<25",
    "aiohttp>=3.13.3,<4",
    "aiosqlite>=0.19,<1",
    "certifi",
    "cryptography>=41.0.0",
    "defusedxml>=0.7.1,<1",
    "pydantic>=2.0,<3",
    "rarfile",
    "tenacity>=9.1,<10",
    "python-json-logger>=2.0,<4",
    "tomli-w>=1.0",
    "sv-ttk>=2.5",
    "keyring>=24.0",
    "psutil>=5.8",
    "websockets>=14.0",
    "langchain-core>=0.1,<1",
    "langgraph>=0.0.1,<1",
    "nicegui>=1.4,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=1.0",
    "pytest-aiohttp>=1.0,<2",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
ignore = [
    "RUF001", "RUF002", "RUF003",  # Ambiguous unicode (intentional in docs/test comments)
    "RUF006",  # asyncio.create_task reference (fire-and-forget pattern)
    "RUF012",  # Mutable class attributes (intentional class constants)
    "SIM102", "SIM103", "SIM117",  # Simplification suggestions (cosmetic)
    "N802", "N806", "N817", "N818",  # Naming conventions (pre-existing throughout)
    "B904",  # raise from err (pre-existing exception style)
]

[tool.setuptools]
packages = ["sky_claw"]
