[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "sky-claw"
version = "0.1.0"
description = "Autonomous Skyrim mod management agent via Mod Organizer 2"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1,<25",
    "aiohttp>=3.13.3,<4",
    "aiosqlite>=0.19,<1",
    "certifi",
    "cryptography>=41.0.0",
    "defusedxml>=0.7.1,<1",
    "pydantic>=2.0,<3",
    "rarfile",
    "tenacity>=9.1,<10",
    "python-json-logger>=2.0,<4",
    "tomli-w>=1.0",
    "sv-ttk>=2.5",
    "keyring>=24.0",
    "psutil>=5.8",
    "websockets>=14.0",
    "langchain-core>=0.1,<1",
    "langgraph>=0.0.1,<1",
    "nicegui>=1.4,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=1.0",
    "pytest-aiohttp>=1.0,<2",
    "pytest-cov",
    "ruff>=0.4",
    "pre-commit>=3.7,<5",
    "mypy>=1.10",
    "types-aiofiles",
    "google-genai>=1.0,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["sky_claw", "tests", "local_scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP046",  # PEP 695 type params — conflicts with TypeVar re-exports and @dataclass Generic
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["sky_claw"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
# Best practices for path resolution
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
# Progressive typing: strict checks disabled until modules are fully annotated.
# Re-enable individual checks as typing coverage improves.
strict = false
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = [
    '^tests/',
    '^scratch/',
    '^autoskills_tmp/',
    '^project_scrape/',
    '^\.venv/',
    '^\.agents/',
]

# Modules with unresolved type errors — ignore until annotated
[[tool.mypy.overrides]]
module = [
    "sky_claw.antigravity.gui.*",
    "sky_claw.antigravity.comms.*",
    "sky_claw.antigravity.agent.*",
    "sky_claw.antigravity.modes.*",
    "sky_claw.antigravity.orchestrator.*",
    "sky_claw.antigravity.reasoning.*",
    "sky_claw.antigravity.scraper.*",
    "sky_claw.antigravity.web.*",
    "sky_claw.antigravity.db.*",
    "sky_claw.antigravity.security.*",
    "sky_claw.antigravity.core.*",
    "sky_claw.local.tools.*",
    "sky_claw.local.fomod.*",
    "sky_claw.local.xedit.*",
    "sky_claw.local.loot.*",
    "sky_claw.local.mo2.*",
    "sky_claw.local.validators.*",
    "sky_claw.local.auto_detect",
    "sky_claw.local.local_config",
    "sky_claw.local.discovery.*",
    "sky_claw.app_context",
    "sky_claw.config",
    "sky_claw.logging_config",
    "sky_claw.__main__",
    "sky_claw.local.tools_installer",
]
ignore_errors = true  # TODO: Remove after type-coverage sprint. Currently 1,684 mypy errors across ~30 modules; re-enable incrementally per-module.

# Strict mode for refactored modules — overrides the broad ignore above
[[tool.mypy.overrides]]
module = [
    "sky_claw.antigravity.orchestrator.sync_engine",
]
strict = true
ignore_errors = false

[tool.hatch.build.targets.wheel]
packages = ["sky_claw"]
